[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/ball.gd" type="Script" id=1]
[ext_resource path="res://graphics/particle3.png" type="Texture" id=2]
[ext_resource path="res://graphics/projectile.png" type="Texture" id=3]
[ext_resource path="res://graphics/glow.png" type="Texture" id=4]
[ext_resource path="res://sound/bounce2.wav" type="AudioStream" id=5]
[ext_resource path="res://graphics/fire_particle.png" type="Texture" id=6]
[ext_resource path="res://sound/damaged2.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/launch.wav" type="AudioStream" id=8]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.575195 ), 0.0, 0.0, 0, 0, Vector2( 0.103375, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.912665, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.995053, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]

flags = 4
width = 2048
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.2
scale_random = 0.2
scale_curve = SubResource( 2 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation" ]

[sub_resource type="Gradient" id=4]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.237569, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]

flags = 4
gradient = SubResource( 4 )
width = 2048

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.4
scale_random = 0.0
color_ramp = SubResource( 5 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Initial Velocity", "Orbit Velocity", "Spread", "Trail" ]

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 6.69562

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 21.9709

[sub_resource type="CanvasItemMaterial" id=9]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Gradient" id=10]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0.976563, 1, 1, 0.0905762, 0.793552, 0.828125, 0 )

[sub_resource type="GradientTexture" id=11]

flags = 4
gradient = SubResource( 10 )
width = 2048

[sub_resource type="ParticlesMaterial" id=12]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 0.2
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, -26, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = -3.40516e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 1.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 2.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.1
scale_random = 0.3
color_ramp = SubResource( 11 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Scale" ]

[node name="ball" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.02
friction = 1.0
bounce = 0.6
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 100
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.75
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Linear", "Visibility" ]
damage = 10

[node name="Hit" type="Particles2D" parent="." index="0"]

emitting = false
amount = 40
lifetime = 0.4
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material" ]

[node name="Trail" type="Particles2D" parent="." index="1"]

emitting = true
amount = 40
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 6 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="Sprite" type="Sprite" parent="." index="2"]

scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

visible = false
shape = SubResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="readyTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[node name="camera" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 2.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="ClickableArea" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 16
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea" index="0"]

shape = SubResource( 8 )

[node name="glow" type="Sprite" parent="." index="7"]

scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="bounce" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="fire" type="Particles2D" parent="." index="9"]

material = SubResource( 9 )
emitting = false
amount = 64
lifetime = 1.0
one_shot = false
preprocess = 0.1
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 12 )
texture = ExtResource( 6 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Material", "Process Material", "Time" ]

[node name="damaged" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="launch" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_ball_body_entered"]

[connection signal="timeout" from="readyTimer" to="." method="_on_pickupTimer_timeout"]

[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_ClickableArea_mouse_entered"]

[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_ClickableArea_mouse_exited"]


